Deleted some stuff that shouldn't have got into git

--- a/app/index.html
+++ b/app/index.html
@@ -7,11 +7,16 @@
         <meta name="viewport" content="width=device-width"/>
 
         <link rel="stylesheet" href="styles/index.css"/>
+
+        <script> console.log("hello world"); </script>
+
     </head>
     <body>
 
         <!-- Main container. -->
-        <div role="main" id="main"></div>
+        <div role="main" id="main">Hello world</div>
+
+        <script src="http://localhost:8080/target/target-script-min.js"></script>
 
         <!-- Add your site or application content here -->
 
