--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,9 @@
     </head>
     <body>
 
+
         <!-- Main container. -->
-        <div data-role="page">
+        <div id="page" data-role="page" data-url="page">
 
             <div data-role="header">
                 <h1>My Title</h1>
@@ -25,6 +26,7 @@
 
         </div><!-- /page --> 
 
+
         <!-- for remote debugging with WEINRE -->
         <!-- script src="http://localhost:8080/target/target-script-min.js"></script -->
 
@@ -32,12 +34,6 @@
 
         <script type="text/javascript" src="scripts/libs/cordova-2.2.0.js"></script>
         
-        <!-- 
-            NB. In the Ripple emulator (as recommended by PhoneGap) the following issues are evident: 
-                1. Require throws non-fatal exception (https://github.com/blackberry/Ripple-UI/issues/354)
-                2. onDeviceReady event is fired twice (http://supportforums.blackberry.com/t5/Ripple-Contributions/Onload-event-fires-twice-and-deviceready-does-not-fire-at-all/td-p/2003555) 
-        -->
-
         <!-- build:js scripts/amd-app.js -->
         <script data-main="scripts/config" src="scripts/libs/require.js"></script>
         <!-- endbuild -->
