Tidied up demo and included component screen

--- a/app/index.html
+++ b/app/index.html
@@ -17,13 +17,13 @@
         <div id="page" data-role="page">
 
             <div data-role="header">
-                <h1>My Title</h1>
-            </div><!-- /header -->
+                <h1>Backbone, Require.js and jQuery Mobile prototype</h1>
+            </div>
 
             <!-- Backbone views will target this div -->    
             <div id="content" data-role="content">   
                 <p>Hello world</p>      
-            </div><!-- /content -->
+            </div>
 
         </div><!-- /page --> 
 
