First pass demo at demonstrating coenrats approach to JQM integration

--- a/app/index.html
+++ b/app/index.html
@@ -13,19 +13,21 @@
     <body>
 
 
+        <div id="page" data-role="page"></div>
+
         <!-- Main container :- we use a single jqm page as the target for our Backbone.Marionette views -->
-        <div id="page" data-role="page">
+        <!-- div id="page" data-role="page">
 
             <div data-role="header">
                 <h1>Backbone, Require.js and jQuery Mobile prototype</h1>
-            </div>
+            </div -->
 
             <!-- Backbone views will target this div -->    
-            <div id="content" data-role="content">   
+            <!-- div id="content" data-role="content">   
                 <p>Hello world</p>      
             </div>
 
-        </div><!-- /page --> 
+        </div --><!-- /page --> 
 
 
         <!-- for remote debugging with WEINRE -->
