Second pass at Coenrats JQM and Backbone approach

--- a/app/index.html
+++ b/app/index.html
@@ -13,21 +13,8 @@
     <body>
 
 
-        <div id="page" data-role="page"></div>
-
-        <!-- Main container :- we use a single jqm page as the target for our Backbone.Marionette views -->
-        <!-- div id="page" data-role="page">
-
-            <div data-role="header">
-                <h1>Backbone, Require.js and jQuery Mobile prototype</h1>
-            </div -->
-
-            <!-- Backbone views will target this div -->    
-            <!-- div id="content" data-role="content">   
-                <p>Hello world</p>      
-            </div>
-
-        </div --><!-- /page --> 
+        <!-- JQM seems to need this in the page even though we don't use it -->
+        <div data-role="page"></div>
 
 
         <!-- for remote debugging with WEINRE -->
