Settings model from JSON. Removed ludicrous attempt to set 10gb websql db which was causing app to fail in iOS simulator

--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,7 @@
   <script src="lib/chai.js"></script>
   <script>expect = chai.expect</script>
   <!-- Load application -->
-  <script data-main="../app/scripts/config" src="../app/scripts/libs/require/require.js"></script>
+  <script data-main="scripts/config" src="scripts/libs/require/require.js"></script>
   <!-- trigger the mocha runner -->
   <script src="runner/mocha.js"></script>
 </body>
