Abstracted creation of page view into a sort of base class. Tidied up and generificified some of the file naming

--- a/app/index.html
+++ b/app/index.html
@@ -11,17 +11,16 @@
         <link rel="stylesheet" href="styles/jquery.mobile-1.2.0.css"/>
     </head>
     <body>
-
-
+        
         <!-- JQM seems to need this in the page even though we don't use it -->
         <div data-role="page"></div>
 
-
-        <!-- for remote debugging with WEINRE -->
+        <!-- Uncomment for remote debugging with WEINRE -->
         <!-- script src="http://localhost:8080/target/target-script-min.js"></script -->
 
         <!-- Add your site or application content here -->
 
+        <!-- Ideally require would load this also, but couldn't come up with a way to do so -->
         <script type="text/javascript" src="scripts/libs/cordova-2.2.0.js"></script>
         
         <!-- build:js scripts/amd-app.js -->
